2000-06-14  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/cf/fqdnalias.cf:
	    Don't fqdn-alias if it looks like RFC-822 source route
	    address.

	* lib/rfc822scan.c:
	    Allow RFC-822 source route addresses to go thru without
	    needing quotes -- allow ',' and ':' to be included into
	    addresses without quotes.

2000-06-13  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/cf/fqdnalias.cf:
	    A missed thing in privilege processing in case db lookup
	    succeeds.

	* scheduler/scheduler.h, scheduler/mq2.c, scheduler/mailq.c,
	  scheduler/threads.c:
	    Implemented (in C) initial part of 'mailq' and 'mailq -v'
	    commands for MAILQ-V2 protocol.

	* scheduler/scheduler.c, man/scheduler.8, scheduler/mq2.c,
	  scheduler/mailq.pl:
	    Playing with MAILQ-V2 code to get (experimental) version
	    of detailed reporting a'la old mailq-v1 code.

	* scheduler/mailq.pl:
	    Now this PERL mailq supports functions:
		mailq
		mailq -Q
		mailq -QQ
		mailq -QQQ
	    and has also option '-U' for logging with non-default
	    username/password pair.

2000-06-07  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/libta/ctlopen.c:
	    If ctlopen() contained open() of message body file fails,
	    send a warning() up to the scheduler log WITH errno of
	    that open() call..

	* proto/db/smtp-policy.src:
	    _RBL* alias labels are turned to LOWER CASE -- those keys
	    are lowercased during encoding, but data attributes are
	    not modified while compiling the database, nor when looking
	    up tags..

	* smtpserver/smtpserver.h, smtpserver/smtpdata.c,
	  smtpserver/cfgread.c,    smtpserver/contentpolicy.c,
	  utils/smtp-contentfilter.in:
	    CONTENT policy interface, and sample filter implementation..

	* scheduler/scheduler.c, scheduler/conf.c, scheduler/msgerror.c,
	  man/scheduler.8:
	    Modify the '-n' option semantics to control how DSN RET
	    option value is set in absense of originator supplied value.
