@@ -1,6 +1,6 @@
 %!PS-Adobe-3.0
 %%Creator: groff version 1.15
-%%CreationDate: Tue Jun 13 13:27:56 2000
+%%CreationDate: Mon Jun 19 17:03:09 2000
 %%DocumentNeededResources: font Times-Roman
 %%+ font Times-Bold
 %%+ font Times-Italic
