@@ -1,11 +1,11 @@
 %!PS-Adobe-3.0
 %%Creator: groff version 1.15
-%%CreationDate: Thu Jun  8 14:03:31 2000
+%%CreationDate: Mon Jun 19 17:03:09 2000
 %%DocumentNeededResources: font Times-Roman
 %%+ font Times-Bold
 %%+ font Times-Italic
 %%DocumentSuppliedResources: procset grops 1.15 0
-%%Pages: 3
+%%Pages: 4
 %%PageOrder: Ascend
 %%Orientation: Portrait
 %%EndComments
@@ -416,27 +416,35 @@ F1(FILES)72 350.4 Q F2(/etc/zmailer)108 362.4 Q(.conf)-1.11 E
 (/var/spool/postof)108 374.4 Q(\214ce \(POST)-.18 E(OFFICE\))-.18 E F1
 (SEE ALSO)72 391.2 Q F0(scheduler\(8\))108 403.2 Q F1(SEE ALSO)72 420 Q
 F0(router\(8\))108 432 Q(RFC 821)108 448.8 Q
-(The basic SMTP speci\214cation)146.1 E(RFC 1123)108 460.8 Q -1.11(Va)
-141.1 G(rious 821 parameter clari\214cations)1.11 E(Se)108 484.8 Q -.15
-(ve)-.25 G(ral e).15 E(xtended SMTP f)-.15 E(acilities are implemented:)
--.1 E(RFC 1341/1521/2045)108 508.8 Q(MIME speci\214cation \(body)95.54 E
-2.5(,f)-.65 G(ormats\))-2.5 E(RFC 1342/1522/2047)108 520.8 Q
-(MIME speci\214cation \(headers\))95.54 E(RFC 1425/1651/1869)108 532.8 Q
-(ESMTP EHLO frame)95.54 E -.1(wo)-.25 G(rk).1 E(RFC 1426/1652)108 544.8
-Q(ESMTP 8BITMIME)118.32 E(RFC 1427/1653/1870)108 556.8 Q(ESMTP SIZE)
-95.54 E(RFC 1428)108 568.8 Q(Basic MIME con)141.1 E -.15(ve)-.4 G
-(rsion rules).15 E(RFC 1830)108 580.8 Q(ESMTP CHUNKING)141.1 E
-(RFC 1854/2197)108 592.8 Q(ESMTP PIPELINING)118.32 E(RFC 1891)108 604.8
-Q(ESMTP DSN)141.1 E(RFC 1893/2034)108 616.8 Q(ESMTP ENHANCEDST)118.32 E
--1.11(AT)-.93 G(USCODES)1.11 E(RFC 1985)108 628.8 Q(ESMTP ETRN)141.1 E
-(RFC 2487)108 640.8 Q(ESMTP ST)141.1 E(AR)-.93 E(TTLS)-.6 E
-(RFC 2554+M$ Exchange)108 652.8 Q(ESMTP A)79.64 E(UTH LOGIN)-.55 E
-(RFC 2554+NetScape)108 664.8 Q(ESMTP A)97.14 E(UTH=LOGIN)-.55 E F1 -.45
-(AU)72 681.6 S(THOR).45 E F0(This program authored and cop)108 693.6 Q
-(yright by:)-.1 E(Rayan Zachariassen <rayan@cs.toronto.edu>)108 705.6 Q
-(MIME do)108 717.6 Q(wncon)-.25 E -.15(ve)-.4 G
-(rting feature \(RFC1428\) by:).15 E(Matti Aarnio <mea@utu.\214>)108
-729.6 Q 2.5(2M)282.67 768 S(ar 2000)-2.5 E(3)205.67 E EP
+(The basic SMTP speci\214cation)146.1 E(RFC 822)108 460.8 Q
+(Mail header format)146.1 E(RFC 974)108 472.8 Q(MX routing)146.1 E
+(RFC 1123)108 484.8 Q -1.11(Va)141.1 G
+(rious 821 parameter clari\214cations)1.11 E(Se)108 508.8 Q -.15(ve)-.25
+G(ral e).15 E(xtended SMTP f)-.15 E(acilities are implemented:)-.1 E
+(RFC 1341/1521/2045)108 532.8 Q(MIME speci\214cation \(body)95.54 E 2.5
+(,f)-.65 G(ormats\))-2.5 E(RFC 1342/1522/2047)108 544.8 Q
+(MIME speci\214cation \(headers\))95.54 E(RFC 1425/1651/1869)108 556.8 Q
+(ESMTP EHLO frame)95.54 E -.1(wo)-.25 G(rk).1 E(RFC 1426/1652)108 568.8
+Q(ESMTP 8BITMIME)118.32 E(RFC 1427/1653/1870)108 580.8 Q(ESMTP SIZE)
+95.54 E(RFC 1428)108 592.8 Q(Basic MIME con)141.1 E -.15(ve)-.4 G
+(rsion rules).15 E(RFC 1830)108 604.8 Q(ESMTP CHUNKING)141.1 E
+(RFC 1854/2197)108 616.8 Q(ESMTP PIPELINING)118.32 E(RFC 1891)108 628.8
+Q(ESMTP DSN)141.1 E(RFC 1893/2034)108 640.8 Q(ESMTP ENHANCEDST)118.32 E
+-1.11(AT)-.93 G(USCODES)1.11 E(RFC 1985)108 652.8 Q(ESMTP ETRN)141.1 E
+(RFC 2487)108 664.8 Q(ESMTP ST)141.1 E(AR)-.93 E(TTLS)-.6 E
+(RFC 2554+M$ Exchange)108 676.8 Q(ESMTP A)79.64 E(UTH LOGIN)-.55 E
+(RFC 2554+NetScape)108 688.8 Q(ESMTP A)97.14 E(UTH=LOGIN)-.55 E F1 -.45
+(AU)72 705.6 S(THOR).45 E F0(This program authored and cop)108 717.6 Q
+(yright by:)-.1 E(Rayan Zachariassen <rayan@cs.toronto.edu>)108 729.6 Q
+2.5(2M)282.67 768 S(ar 2000)-2.5 E(3)205.67 E EP
+%%Page: 4 4
+%%BeginPageSetup
+BP
+%%EndPageSetup
+/F0 10/Times-Roman@0 SF 389.94(SMTP\(8\) SMTP\(8\))72 48 R(MIME do)108
+84 Q(wncon)-.25 E -.15(ve)-.4 G(rting feature \(RFC1428\) by:).15 E
+(Matti Aarnio <mea@utu.\214>)108 96 Q 2.5(2M)282.67 768 S(ar 2000)-2.5 E
+(4)205.67 E EP
 %%Trailer
 end
 %%EOF
