@@ -1,3 +1,12 @@
+2000-06-19  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
+
+	* transports/smtp/smtp.h, transports/smtp/smtp.c:
+	    Rewrote (in a sane way) the pipelined smtp_sync()
+	    status code formulation so that we won't reject
+	    recipients just because their system yields 400
+	    code for all RCPTs which they get, and then said
+	    to DATA that 'no recipients given yet'..
+
 2000-06-14  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
 
 	* proto/cf/fqdnalias.cf:
